# astrbot_plugin_minecraft_adapter

./: .gitignore  README.md  __init__.py  _conf_schema.json  main.py  metadata.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  rust-wheels.yml
core/: models.py  server_manager.py
docs/releases/: v3.0.0.md  v3.0.1.md
handlers/: __init__.py  binding_commands.py  commands.py  custom_commands.py  mine_sentinel_commands.py  remote_commands.py  server_query_commands.py  session_state.py
platform/: adapter.py
rust/: Cargo.toml
rust/src/: codec.rs  dialogue_terms.rs  lib.rs  observation_priority.rs  runtime_hints.rs
scripts/: package_plugin.py  render_report_preview.py
services/: __init__.py  message_bridge.py  renderer.py  session_targets.py
services/mine_sentinel/: __init__.py  alerts.py  anomaly_detector.py  console_log.py  delivery.py  disk_store.py  dispatch.py  formatter.py  hourly_summary.py  issue_formatting.py  jobs.py  models.py  observation_priority.py  report_artifacts.py  reporter.py  routing.py  runtime_log.py  service.py  template_miner.py
services/mine_sentinel/reporting/: __init__.py  ai_diagnosis.py  ai_issue_review.py  ai_normalizer.py  ai_prompt.py  common.py  (+24 more)
services/rendering/: __init__.py  avatar.py  cards.py  common.py  fonts.py  image.py  models.py  text.py
tests/: astrbot_stubs.py  mine_sentinel_rs_stub.py  test_binding_commands.py  test_command_groups.py  test_incident_management.py  test_mine_sentinel.py  test_remote_commands.py  test_rendering_helpers.py  test_rest_v2_models.py  test_server_query_commands.py
(+8 files in other folders)
